src/net/moonlightflower/wc3libs/misc/antlr/out/grammar/JassParser.java
// Generated from grammar\Jass.g4 by ANTLR 4.5.3

	package net.moonlightflower.wc3libs.misc.antlr.out.grammar;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class JassParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.3", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, BOOL_LITERAL=43, INT_LITERAL=44, 
		DEC_INT_LITERAL=45, OCT_INT_LITERAL=46, HEX_INT_LITERAL=47, ID_INT_LITERAL=48, 
		REAL_LITERAL=49, STRING_LITERAL=50, ID=51, CURLY_L=52, CURLY_R=53, COMMA=54, 
		NEW_LINE=55, WS=56;
	public static final int
		RULE_root = 0, RULE_globalsBlock = 1, RULE_varName = 2, RULE_funcName = 3, 
		RULE_globalDec = 4, RULE_surroundedExpr = 5, RULE_expr = 6, RULE_funcExpr = 7, 
		RULE_arg_list = 8, RULE_arrayRead = 9, RULE_funcRef = 10, RULE_literal = 11, 
		RULE_localVarDec = 12, RULE_localVarDec_list = 13, RULE_statement2 = 14, 
		RULE_statement = 15, RULE_statement_list = 16, RULE_callFunc = 17, RULE_setVar = 18, 
		RULE_condition = 19, RULE_selection2 = 20, RULE_selection = 21, RULE_loop = 22, 
		RULE_exitwhen = 23, RULE_loopBody = 24, RULE_loopBodyLine = 25, RULE_rule_return = 26, 
		RULE_typeName = 27, RULE_funcDec = 28, RULE_func = 29, RULE_funcReturnType = 30, 
		RULE_funcParam_list = 31, RULE_funcParam = 32, RULE_funcBody = 33, RULE_typeDec = 34, 
		RULE_nativeDec = 35;
	public static final String[] ruleNames = {
		"root", "globalsBlock", "varName", "funcName", "globalDec", "surroundedExpr", 
		"expr", "funcExpr", "arg_list", "arrayRead", "funcRef", "literal", "localVarDec", 
		"localVarDec_list", "statement2", "statement", "statement_list", "callFunc", 
		"setVar", "condition", "selection2", "selection", "loop", "exitwhen", 
		"loopBody", "loopBodyLine", "rule_return", "typeName", "funcDec", "func", 
		"funcReturnType", "funcParam_list", "funcParam", "funcBody", "typeDec", 
		"nativeDec"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'globals'", "'endglobals'", "'array'", "'constant'", "'='", "'('", 
		"')'", "'and'", "'or'", "'not'", "'+'", "'-'", "'*'", "'/'", "'<'", "'<='", 
		"'=='", "'!='", "'>'", "'>='", "'['", "']'", "'function'", "'local'", 
		"'call'", "'set'", "'if'", "'then'", "'endif'", "'elseif'", "'else'", 
		"'loop'", "'endloop'", "'exitwhen'", "'return'", "'takes'", "'returns'", 
		"'endfunction'", "'nothing'", "'type'", "'extends'", "'native'", null, 
		null, null, null, null, null, null, null, null, "'{'", "'}'", "','"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, "BOOL_LITERAL", "INT_LITERAL", 
		"DEC_INT_LITERAL", "OCT_INT_LITERAL", "HEX_INT_LITERAL", "ID_INT_LITERAL", 
		"REAL_LITERAL", "STRING_LITERAL", "ID", "CURLY_L", "CURLY_R", "COMMA", 
		"NEW_LINE", "WS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Jass.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public JassParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class RootContext extends ParserRuleContext {
		public GlobalsBlockContext globalsBlock() {
			return getRuleContext(GlobalsBlockContext.class,0);
		}
		public List<TerminalNode> NEW_LINE() { return getTokens(JassParser.NEW_LINE); }
		public TerminalNode NEW_LINE(int i) {
			return getToken(JassParser.NEW_LINE, i);
		}
		public List<TypeDecContext> typeDec() {
			return getRuleContexts(TypeDecContext.class);
		}
		public TypeDecContext typeDec(int i) {
			return getRuleContext(TypeDecContext.class,i);
		}
		public List<NativeDecContext> nativeDec() {
			return getRuleContexts(NativeDecContext.class);
		}
		public NativeDecContext nativeDec(int i) {
			return getRuleContext(NativeDecContext.class,i);
		}
		public List<TerminalNode> WS() { return getTokens(JassParser.WS); }
		public TerminalNode WS(int i) {
			return getToken(JassParser.WS, i);
		}
		public List<FuncContext> func() {
			return getRuleContexts(FuncContext.class);
		}
		public FuncContext func(int i) {
			return getRuleContext(FuncContext.class,i);
		}
		public List<TerminalNode> EOF() { return getTokens(JassParser.EOF); }
		public TerminalNode EOF(int i) {
			return getToken(JassParser.EOF, i);
		}
		public RootContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_root; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JassListener ) ((JassListener)listener).enterRoot(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JassListener ) ((JassListener)listener).exitRoot(this);
		}
	}

	public final RootContext root() throws RecognitionException {
		RootContext _localctx = new RootContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_root);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(75);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(72);
					_la = _input.LA(1);
					if ( !(_la==NEW_LINE || _la==WS) ) {
					_errHandler.recoverInline(this);
					} else {
						consume();
					}
					}
					} 
				}
				setState(77);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}
			setState(91);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__39) {
				{
				{
				setState(78);
				typeDec();
				setState(80);
				_la = _input.LA(1);
				if (_la==WS) {
					{
					setState(79);
					match(WS);
					}
				}

				setState(82);
				match(NEW_LINE);
				setState(86);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(83);
						_la = _input.LA(1);
						if ( !(_la==NEW_LINE || _la==WS) ) {
						_errHandler.recoverInline(this);
						} else {
							consume();
						}
						}
						} 
					}
					setState(88);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
				}
				}
				}
				setState(93);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(97);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(94);
					_la = _input.LA(1);
					if ( !(_la==NEW_LINE || _la==WS) ) {
					_errHandler.recoverInline(this);
					} else {
						consume();
					}
					}
					} 
				}
				setState(99);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			}
			setState(113);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__3 || _la==T__41) {
				{
				{
				setState(100);
				nativeDec();
				setState(102);
				_la = _input.LA(1);
				if (_la==WS) {
					{
					setState(101);
					match(WS);
					}
				}

				setState(104);
				match(NEW_LINE);
				setState(108);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(105);
						_la = _input.LA(1);
						if ( !(_la==NEW_LINE || _la==WS) ) {
						_errHandler.recoverInline(this);
						} else {
							consume();
						}
						}
						} 
					}
					setState(110);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
				}
				}
				}
				setState(115);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(117);
			_la = _input.LA(1);
			if (_la==WS) {
				{
				setState(116);
				match(WS);
				}
			}

			setState(119);
			globalsBlock();
			setState(121);
			_la = _input.LA(1);
			if (_la==WS) {
				{
				setState(120);
				match(WS);
				}
			}

			setState(123);
			match(NEW_LINE);
			setState(127);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,10,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(124);
					_la = _input.LA(1);
					if ( !(_la==NEW_LINE || _la==WS) ) {
					_errHandler.recoverInline(this);
					} else {
						consume();
					}
					}
					} 
				}
				setState(129);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,10,_ctx);
			}
			setState(143);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,13,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(130);
					nativeDec();
					setState(132);
					_la = _input.LA(1);
					if (_la==WS) {
						{
						setState(131);
						match(WS);
						}
					}

					setState(134);
					_la = _input.LA(1);
					if ( !(_la==EOF || _la==NEW_LINE) ) {
					_errHandler.recoverInline(this);
					} else {
						consume();
					}
					setState(138);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,12,_ctx);
					while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
						if ( _alt==1 ) {
							{
							{
							setState(135);
							_la = _input.LA(1);
							if ( !(_la==NEW_LINE || _la==WS) ) {
							_errHandler.recoverInline(this);
							} else {
								consume();
							}
							}
							} 
						}
						setState(140);
						_errHandler.sync(this);
						_alt = getInterpreter().adaptivePredict(_input,12,_ctx);
					}
					}
					} 
				}
				setState(145);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,13,_ctx);
			}
			setState(149);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,14,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(146);
					_la = _input.LA(1);
					if ( !(_la==NEW_LINE || _la==WS) ) {
					_errHandler.recoverInline(this);
					} else {
						consume();
					}
					}
					} 
				}
				setState(151);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,14,_ctx);
			}
			setState(165);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__3 || _la==T__22) {
				{
				{
				setState(152);
				func();
				setState(154);
				_la = _input.LA(1);
				if (_la==WS) {
					{
					setState(153);
					match(WS);
					}
				}

				setState(156);
				match(NEW_LINE);
				setState(160);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,16,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(157);
						_la = _input.LA(1);
						if ( !(_la==NEW_LINE || _la==WS) ) {
						_errHandler.recoverInline(this);
						} else {
							consume();
						}
						}
						} 
					}
					setState(162);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,16,_ctx);
				}
				}
				}
				setState(167);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(171);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NEW_LINE || _la==WS) {
				{
				{
				setState(168);
				_la = _input.LA(1);
				if ( !(_la==NEW_LINE || _la==WS) ) {
				_errHandler.recoverInline(this);
				} else {
					consume();
				}
				}
				}
				setState(173);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class GlobalsBlockContext extends ParserRuleContext {
		public List<TerminalNode> NEW_LINE() { return getTokens(JassParser.NEW_LINE); }
		public TerminalNode NEW_LINE(int i) {
			return getToken(JassParser.NEW_LINE, i);
		}
		public List<TerminalNode> WS() { return getTokens(JassParser.WS); }
		public TerminalNode WS(int i) {
			return getToken(JassParser.WS, i);
		}
		public List<GlobalDecContext> globalDec() {
			return getRuleContexts(GlobalDecContext.class);
		}
		public GlobalDecContext globalDec(int i) {
			return getRuleContext(GlobalDecContext.class,i);
		}
		public GlobalsBlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_globalsBlock; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JassListener ) ((JassListener)listener).enterGlobalsBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JassListener ) ((JassListener)listener).exitGlobalsBlock(this);
		}
	}

	public final GlobalsBlockContext globalsBlock() throws RecognitionException {
		GlobalsBlockContext _localctx = new GlobalsBlockContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_globalsBlock);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(174);
			match(T__0);
			setState(176);
			_la = _input.LA(1);
			if (_la==WS) {
				{
				setState(175);
				match(WS);
				}
			}

			setState(178);
			match(NEW_LINE);
			setState(182);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,20,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(179);
					_la = _input.LA(1);
					if ( !(_la==NEW_LINE || _la==WS) ) {
					_errHandler.recoverInline(this);
					} else {
						consume();
					}
					}
					} 
				}
				setState(184);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,20,_ctx);
			}
			setState(198);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__3 || _la==ID) {
				{
				{
				setState(185);
				globalDec();
				setState(187);
				_la = _input.LA(1);
				if (_la==WS) {
					{
					setState(186);
					match(WS);
					}
				}

				setState(189);
				match(NEW_LINE);
				setState(193);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,22,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(190);
						_la = _input.LA(1);
						if ( !(_la==NEW_LINE || _la==WS) ) {
						_errHandler.recoverInline(this);
						} else {
							consume();
						}
						}
						} 
					}
					setState(195);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,22,_ctx);
				}
				}
				}
				setState(200);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(204);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NEW_LINE || _la==WS) {
				{
				{
				setState(201);
				_la = _input.LA(1);
				if ( !(_la==NEW_LINE || _la==WS) ) {
				_errHandler.recoverInline(this);
				} else {
					consume();
				}
				}
				}
				setState(206);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(207);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarNameContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(JassParser.ID, 0); }
		public VarNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varName; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JassListener ) ((JassListener)listener).enterVarName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JassListener ) ((JassListener)listener).exitVarName(this);
		}
	}

	public final VarNameContext varName() throws RecognitionException {
		VarNameContext _localctx = new VarNameContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_varName);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(209);
			match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FuncNameContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(JassParser.ID, 0); }
		public FuncNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funcName; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JassListener ) ((JassListener)listener).enterFuncName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JassListener ) ((JassListener)listener).exitFuncName(this);
		}
	}

	public final FuncNameContext funcName() throws RecognitionException {
		FuncNameContext _localctx = new FuncNameContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_funcName);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(211);
			match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class GlobalDecContext extends ParserRuleContext {
		public TypeNameContext type;
		public VarNameContext name;
		public ExprContext val;
		public List<TerminalNode> WS() { return getTokens(JassParser.WS); }
		public TerminalNode WS(int i) {
			return getToken(JassParser.WS, i);
		}
		public TypeNameContext typeName() {
			return getRuleContext(TypeNameContext.class,0);
		}
		public VarNameContext varName() {
			return getRuleContext(VarNameContext.class,0);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public GlobalDecContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_globalDec; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JassListener ) ((JassListener)listener).enterGlobalDec(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JassListener ) ((JassListener)listener).exitGlobalDec(this);
		}
	}

	public final GlobalDecContext globalDec() throws RecognitionException {
		GlobalDecContext _localctx = new GlobalDecContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_globalDec);
		int _la;
		try {
			setState(236);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,29,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(213);
				((GlobalDecContext)_localctx).type = typeName();
				setState(214);
				match(WS);
				setState(215);
				match(T__2);
				setState(216);
				match(WS);
				setState(217);
				((GlobalDecContext)_localctx).name = varName();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(221);
				_la = _input.LA(1);
				if (_la==T__3) {
					{
					setState(219);
					match(T__3);
					setState(220);
					match(WS);
					}
				}

				setState(223);
				((GlobalDecContext)_localctx).type = typeName();
				setState(224);
				match(WS);
				setState(225);
				((GlobalDecContext)_localctx).name = varName();
				setState(234);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,28,_ctx) ) {
				case 1:
					{
					setState(227);
					_la = _input.LA(1);
					if (_la==WS) {
						{
						setState(226);
						match(WS);
						}
					}

					setState(229);
					match(T__4);
					setState(231);
					_la = _input.LA(1);
					if (_la==WS) {
						{
						setState(230);
						match(WS);
						}
					}

					setState(233);
					((GlobalDecContext)_localctx).val = expr(0);
					}
					break;
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SurroundedExprContext extends ParserRuleContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public List<TerminalNode> WS() { return getTokens(JassParser.WS); }
		public TerminalNode WS(int i) {
			return getToken(JassParser.WS, i);
		}
		public SurroundedExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_surroundedExpr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JassListener ) ((JassListener)listener).enterSurroundedExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JassListener ) ((JassListener)listener).exitSurroundedExpr(this);
		}
	}

	public final SurroundedExprContext surroundedExpr() throws RecognitionException {
		SurroundedExprContext _localctx = new SurroundedExprContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_surroundedExpr);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(238);
			match(T__5);
			setState(240);
			_la = _input.LA(1);
			if (_la==WS) {
				{
				setState(239);
				match(WS);
				}
			}

			setState(242);
			expr(0);
			setState(244);
			_la = _input.LA(1);
			if (_la==WS) {
				{
				setState(243);
				match(WS);
				}
			}

			setState(246);
			match(T__6);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExprContext extends ParserRuleContext {
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public List<TerminalNode> WS() { return getTokens(JassParser.WS); }
		public TerminalNode WS(int i) {
